# Scriber-Backend

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  sgconfig.yml  tasks.py
ci/: build_image.sh  build_runtime_image.sh  check_work_dir.sh  deploy_c122_fullgoal_pre.sh  deploy_ccxi_demo.sh  deploy_ccxi_market_dev.sh  deploy_chinaamc_test.sh  deploy_chinaamc_yx_test.sh  deploy_chinastock_demo.sh  deploy_cib_test.sh  deploy_citics_tg_poc.sh  deploy_citics_th.sh  deploy_citicsdcm_test.sh  deploy_cmbchina_test.sh  deploy_cmfchina_test.sh  deploy_csc_mark.sh  deploy_csc_mark_prod.sh  deploy_csc_octopus_test.sh  deploy_draft.sh  deploy_draft_competeness_zjs.sh  deploy_draft_csc_prod.sh  deploy_draft_csc_test.sh  deploy_draft_ht_test.sh  deploy_draft_prod.sh  deploy_draft_prompter_test.sh  deploy_draft_szse.sh  deploy_draft_szse_44020.sh  deploy_ecitic_demo.sh  deploy_ecitic_prod.sh  deploy_fullgoal_dev.sh  deploy_gffound_test.sh  deploy_gjzq_test.sh  deploy_glazer_test.sh  deploy_guosen_test.sh  deploy_jsfund_test.sh  deploy_nafmii_dev.sh  deploy_nafmii_test.sh  deploy_pdfinsight_pub_prod.sh  deploy_pdfinsight_pub_test.sh  deploy_pre.sh  (+17 more)
ci/ast-grep/: README.md
config/: config-base.yml  config-dev.yml  config-docker-ccxi-market-test.yml  config-docker-ccxi-market.yml  config-docker-ccxi-poc.yml  config-docker-ccxi-test.yml  config-docker-ccxi.yml  config-docker-cczq-glazer.yml  config-docker-cgs.yml  config-docker-chinaamc-test.yml  config-docker-chinaamc-yx.yml  config-docker-chinaamc.yml  config-docker-chinastock.yml  config-docker-cib.yml  config-docker-ciccwm-poc.yml  config-docker-citic-glazer-test.yml  config-docker-citic-glazer.yml  config-docker-citics-dcm-prod.yml  config-docker-citics-dcm-test.yml  config-docker-citics-tg-dev.yml  config-docker-citics-tg-prod.yml  config-docker-citics-th.yml  config-docker-cjzq-poc-dev.yml  config-docker-cjzq-poc.yml  config-docker-cmbchina-prod.yml  config-docker-cmbchina-test.yml  config-docker-cmfchina-prod.yml  config-docker-cmfchina-test.yml  config-docker-cms.yml  config-docker-common-poc.yml  config-docker-csc-dev.yml  config-docker-csc-dollar-poc.yml  config-docker-csc-dollar.yml  config-docker-csc-octopus-test.yml  config-docker-csc-octopus.yml  config-docker-csc-prod.yml  config-docker-csc.yml  config-docker-csctg-poc.yml  config-docker-csits-test.yml  config-docker-ebscn-poc.yml  (+37 more)
data/: schema_ipo_subset.json  syl_keywords.json
data/cgs/: 上海盈象大象收益_1_号私募证券投资基金.json  昨夜星辰昨夜2风私募证券投资基金.json  误入藕花深处私募证券投资基金.json
data/ecitic/: not_small_scattered_template.xlsx  small_scattered_template.xlsx
data/htsc/: template.xlsx
data/model/: autodoc  sse_ipo  sse_ipo2  sse_nc  szse  zjh
data/nafmii/: sensitive_template.xlsx
data/schema/: 44028_fund_schema.json  bosera_schema.json  ccxi-market_schema.json  ccxi_schema.json  cczq_glazer_schema.json  china_stock_schema.json  chinaamc_yx_prospectus_schema.json  chinaamc_yx_schema.json  citic_glazer_schema.json  citics_dcm_schema.json  citics_tg_poc_schema.json  cmbchina_schema.json  cmfchina_schema.json  cmschina_poc_schema.json  csc_dollar_debt_schema.json  csc_octopus_schema.json  csc_schema.json  ebscn_schema.json  ecitic_poc_schema.json  ecitic_ssc_schema.json  ecitic_tg_asset_management_schema.json  ecitic_tg_private_fund_schema.json  ecitic_tg_supplementary_agreement_schema.json  ecitic_zg_supplementary_agreement_schema.json  fintable.xlsx  fintable_schema.json  fullgoal_schema.json  gffund_pre_schema.json  gffund_schema.json  guosen_it_schema.json  ht_fund_schema.json  icbccs_schema.json  jyamc_schema.json  nafmii_schema.json  sse_anno_schema.json  sse_poc_schema.json  sse_schema.json  szse_financial_schema.json  szse_schema.json  zts_schema.json
data/sse_output/: kcb_announcement_data_structure.csv  ke_prospectus_structure.csv  main_announcement_structure.csv
data/stat/: predict_with_table_ai.json
data/szse_field_map/: 重组报告业务i_field_map.txt
data/szse_output/: IPO企业基本信息与联系方式表.xlsm  city_postcodes.json
data/tbl_headers/: 交易对方对价情况.json  交易或资产金额占比.json  交易金额.json  公司名称.json  其他应收款.json  净利润.json  净资产.json  可比公司 动态市盈率 中位数.json  可比公司 动态市盈率 算术平均数.json  可比公司 市净率 中位数.json  可比公司 市净率 算术平均数.json  可比公司 静态市盈率 中位数.json  可比公司 静态市盈率 算术平均数.json  存货周转率.json  存货金额.json  (+33 more)
docker/: Dockerfile  cyc  deploy_upgrade.sh  docker-compose-2.yml  docker-compose-3.yml  docker-entrypoint.sh  docker-entrypoint_dev.sh  dockerignore  fix_permission.sh  healthcheck.py  patch_installer.sh
docs/: answer-format.md  cfe.org  csc-octopus.md  draft-api.md  external-api.md  format_describe.py  iframe-security-configurations.md  migration.md  mold-deploy.md  mold_prophet.md  nginx-security-improvements.md  pdf-table-deploy.md  pdf-table-format.md  post-data-format.md  remote_call_model.md  scriber-service.md  szse-api.md  webapi.md  华夏基金智能抽取系统需求分析报告V1.2-20221227.docx
misc/: alembic.ini  db-schema.sql  db-tools.sql
remarkable/: __init__.py  base_handler.py  config.py  db.py  dependencies.py  gino_db_services.py  pw_db_services.py  server.py  session.py  static_files.py  value_obj.py
scripts/: pg2mysql.py
template/: export_file.html  new_page.html  page.html  preview_pdf.html
tests/: __init__.py  client.py  conftest.py  helpers.py  test_answer_converter.py  test_answer_data.py  test_answer_item.py  test_answer_node_calculator.py  test_auth.py  test_ccxi_market_converter.py  test_cgs_api.py  test_cgs_checker.py  test_cgs_comment.py  test_cgs_diff.py  test_cgs_format_suggestion.py  test_cgs_number2chinese.py  test_cgs_public_fund_template_structure.py  test_cgs_replace_template_rule.py  test_cgs_rule.py  test_cgs_rule_api.py  test_common_util.py  test_config.py  test_converter.py  test_crypto_util.py  test_diff.py  test_ebscn.py  test_ecitic_api.py  test_ecitic_converter.py  test_ecitic_investment_ratio.py  test_file.py  test_file_api.py  test_fintable.py  test_gffund_upload_api.py  test_multiprocess.py  test_node.py  test_octopus_formatter.py  test_package_encrypt.py  test_partial_text.py  test_pattern.py  test_pdf2docx.py  (+15 more)
(+1604 files in other folders)
